# RSStoWebhook

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  Procfile  README.md  add_to_database.py  comics.json  db_types.py  feed_lister.py  pyproject.toml  requirements-dev.txt  requirements-lint.txt  requirements-test.txt  requirements-type.txt  requirements.txt  requirements_dev.txt  schema.json  scrapeScript.js  setup.py  tester.py  tox.ini  worker.py
.github/workflows/: codepeed.yml  codspeed.yml  env_test.yml  main.yml  tests.yml
design/: database-schema-and-layout.md  discord-api.md  high-level.md  overview-and-goals.md  past-bugs.md  past-issues.md
src/rss_to_webhook/: __main__.py  add_comic_to_database.py  check_feeds_and_update.py  constants.py  db_operations.py  db_types.py  discord_types.py  main.py  utils.py  worker.py
tests/: conftest.py  test_add_to_collection.py  test_add_to_db.py  test_discord.py  test_e2e.py  test_get_headers.py  test_get_new_entries.py  test_main.py  test_make_body.py  test_make_messages.py  test_makebody.py  test_pytest  test_pytest.py  test_ratelimiter.py  test_real_apis.py  test_utils.py  tester.py  tests_real_apis.py
typings/feedparser/: __init__.pyi  api.pyi  util.pyi
